# REX

./: .env.example  .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.agent  Dockerfile.hub  LICENSE  README.md  docker-compose.agent.yaml  docker-compose.hub.yaml
.github/workflows/: ci.yml
crates/rex-agent/: Cargo.toml
crates/rex-agent/src/: client.rs  config.rs  identity.rs  lib.rs  log_collector.rs  ws.rs
crates/rex-binaries/: Cargo.toml
crates/rex-binaries/tests/: integration.rs
crates/rex-common/: Cargo.toml  build.rs
crates/rex-common/src/: app.rs  cli.rs  lib.rs  sql.rs  supervisor.rs  tls_client.rs  update_state.rs  updater.rs  version.rs
crates/rex-common/tests/: integration.rs
crates/rex-docker/: Cargo.toml
crates/rex-docker/src/: connector.rs  lib.rs
crates/rex-hub/: Cargo.toml
crates/rex-hub/src/: acme.rs  agent.rs  agent_download.rs  ai.rs  audit.rs  auth.rs  backup.rs  config.rs  db.rs  env.rs  files.rs  helpers.rs  history.rs  lib.rs  metrics.rs  migrations.sql  queries.rs  resource.rs  routes.rs  self_signed.rs  settings.rs  sql.rs  ssh_config.rs  terminal.rs  tls.rs  transfer.rs  update.rs  user.rs  ws.rs  ws_docker.rs  ws_mysql.rs  ws_postgresql.rs  ws_redis.rs  ws_s3.rs  ws_sqlite.rs  ws_terminal.rs
crates/rex-mysql/: Cargo.toml
crates/rex-mysql/src/: connector.rs  lib.rs
crates/rex-postgresql/: Cargo.toml
crates/rex-postgresql/src/: connector.rs  lib.rs
crates/rex-redis/: Cargo.toml
crates/rex-redis/src/: connector.rs  lib.rs  resp.rs
crates/rex-s3/: Cargo.toml
crates/rex-s3/src/: connector.rs  lib.rs
crates/rex-sqlite/: Cargo.toml
crates/rex-sqlite/src/: connector.rs  lib.rs
crates/rex-ssh/: Cargo.toml
crates/rex-ssh/src/: auth.rs  client.rs  crypto.rs  lib.rs
crates/rex-transfer/: Cargo.toml
crates/rex-transfer/src/: executor.rs  lib.rs  local.rs  sftp.rs  task.rs
docs/: DEVELOPMENT.md  PRODUCT.md  RELEASE-TEMPLATE.md  UPGRADE.md  agent-readme.md  decision-tree.md
docs/architecture/: connection-channels.md  docker.md  file-transfer.md  process-model.md  update-mechanism.md
docs/milestones/: 0.10.0-sqlite-support.md  0.11.0-s3-minio-support.md  0.12.0-quality-cleanup.md  0.13.0-mysql-postgresql-real-connection.md  0.14.0-core-panel-refinement.md  0.15.0-cross-connection-file-transfer.md  0.16.0-sql-ai-assistant.md  0.17.0-全局查询功能.md  0.18.0-配置备份与恢复.md  0.19.0-观测与诊断.md  0.2.0-terminal-sftp-and-polish.md  0.20.0-完成数据连接器实现.md  0.21.0-agent-auto-update.md  0.22.0-agent-management-refine.md  0.23.0-fix-non-ssh-connection.md  0.23.1-ci-build-speedup.md  0.24.0-code-quality-cleanup.md  0.25.0-test-coverage.md  0.26.0-global-search-command-palette.md  0.27.0-ui-feedback-polish.md  0.27.1-ui-design-optimization.md  0.27.2-https-tls-fixes.md  0.28.0-docker-real-connection.md  0.29.0-env-management-interaction.md  0.3.0-ui-polish-and-i18n.md  0.30.0-ssh-form-and-settings-behavior.md  0.31.0-terminal-sftp-unification.md  0.32.0-transfer-progress-polish.md  0.32.1-bugfix-and-experience-fix.md  0.33.0-sql-editor-context-menus.md  0.33.0-sql-editor-experience.md  0.34.0-mobile-experience-enhancement.md  0.35.0-sql-explain-plan.md  0.36.0-settings-version-overview.md  0.36.1-mobile-bottom-nav-fix.md  0.37.0-mobile-experience-polish.md  0.4.0-settings-connect-behavior.md  0.5.0-docker-compose.md  0.6.0-hub-https-and-agent-download.md  0.7.0-hub-acme-auto-cert.md  (+33 more)
docs/milestones/0.10.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.11.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.12.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.13.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.14.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.15.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.16.0-reports/: step2-design-review.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.17.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.18.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.19.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.2.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.20.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.21.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.22.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.23.0-reports/: step5-code-review.md  step7-design-reconfirm.md
docs/milestones/0.23.1-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  step7-design-reconfirm.md
docs/milestones/0.24.0-reports/: step2-design-review.md  step4-simplify.md  step5-code-review.md  step6-test.md  (+1 more)
docs/reference/: api-design.md  config-conventions.md  data-models.md  frontend-architecture.md
prototype/: agents.html  app.html  audit-log.html  dashboard.html  environment-new.html  environment.html  environments.html  files.html  login.html  resource-new.html  settings.html  shared.js  sql.html  terminal.html
prototype/css/: base.css  variables.css
scripts/: build-hub-image.sh
(+214 files in other folders)
