[package]
name = "rex-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rex-agent"
path = "src/bin/rex-agent.rs"

[dependencies]
rex-common = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
