[package]
name = "rex-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rex-agent"
path = "src/bin/rex-agent.rs"

[dependencies]
rex-common = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
sha2 = { workspace = true }
hostname = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
