[package]
name = "rex-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
futures-util = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rcgen = { workspace = true }
