[package]
name = "rex-hub"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rex-hub"
path = "src/bin/rex-hub.rs"

[dependencies]
rex-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
rusqlite = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
r2d2 = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
sha2 = { workspace = true }
rex-ssh = { workspace = true }
rex-transfer = { workspace = true }
reqwest = { workspace = true }
rex-mysql = { workspace = true }
rex-postgresql = { workspace = true }
rex-redis = { workspace = true }
rex-docker = { workspace = true }
rex-sqlite = { workspace = true }
rex-s3 = { workspace = true }
base64 = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
hyper-util = { workspace = true }
rustls-acme = { workspace = true }
rcgen = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
dotenvy = { workspace = true }
aes-gcm = { workspace = true }
chrono = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }