[package]
name = "rex-postgresql"
version.workspace = true
edition.workspace = true

[dependencies]
rex-common = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
