[package]
name = "rex-redis"
version.workspace = true
edition.workspace = true

[dependencies]
rex-common = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
