[package]
name = "rex-s3"
version.workspace = true
edition.workspace = true

[dependencies]
rex-common = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
