[package]
name = "rex-s3"
version.workspace = true
edition.workspace = true

[dependencies]
rex-common = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }