[package]
name = "rex-sqlite"
version.workspace = true
edition.workspace = true

[dependencies]
rex-common = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
