[package]
name = "rex-transfer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
rex-ssh = { workspace = true }
russh-sftp = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
